--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  date_format: ^1.0.8
   flutter_secure_storage: ^3.3.1+1
   flutter_mobx: ^0.3.3+3
   mobx: ^0.3.9+3
