--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  path_provider: ^1.5.1
+  hive: ^1.2.0
   date_format: ^1.0.8
   flutter_secure_storage: ^3.3.1+1
   flutter_mobx: ^0.3.3+3
