--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  shared_preferences: ^0.5.6
   path_provider: ^1.5.1
   hive: ^1.2.0
   date_format: ^1.0.8
